edit pagination responses
