# src/main/java/com/nazer/e_commerce/common/global/PaginatedResponse.java
@@ -1,0 +1,29 @@
+package com.nazer.e_commerce.common.global;
+
+import java.util.List;
+
+import lombok.AllArgsConstructor;
+import lombok.Builder;
+import lombok.Data;
+import lombok.NoArgsConstructor;
+
+@Data
+@Builder
+@NoArgsConstructor
+@AllArgsConstructor
+public class PaginatedResponse<T> {
+    private List<T> data;
+    private Pagination pagination;
+
+    @Data
+    @Builder
+    @NoArgsConstructor
+    @AllArgsConstructor
+    public static class Pagination {
+        
+        private long total;
+        private int totalPages;
+        private int page;
+        private int count;
+    }
+}
