# src/main/java/com/nazer/e_commerce/users/UserController.java
@@ -1,26 +1,21 @@
 package com.nazer.e_commerce.users;
 
-import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.RestController;
-
+import com.nazer.e_commerce.common.global.PaginatedResponse;
 import com.nazer.e_commerce.users.Dto.UpdateProfileDto;
 import com.nazer.e_commerce.users.enums.Provider;
 import com.nazer.e_commerce.users.enums.UserRoles;
 import com.nazer.e_commerce.users.schema.User;
 import com.nazer.e_commerce.users.service.UserService;
 
-import org.springframework.data.domain.Page;
+import jakarta.validation.Valid;
+
+import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PutMapping;
 import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.RestController;
-import org.springframework.security.access.prepost.PreAuthorize;
-import com.nazer.e_commerce.users.enums.UserRoles;
-
-
-import jakarta.validation.Valid;
 
 @RestController
 @RequestMapping({"/users", "/usres"})
@@ -41,8 +36,8 @@ public class UserController {
     }
 
     @GetMapping("/admin")
-    @PreAuthorize("hasRole(T(UserRoles).ADMIN.name())")
-    public Page<User> getUsers(
+    @PreAuthorize("hasRole(T(com.nazer.e_commerce.users.enums.UserRoles).ADMIN.name())")
+    public PaginatedResponse<User> getUsers(
             @RequestParam(defaultValue = "0") int page,
             @RequestParam(defaultValue = "10") int size,
             @RequestParam(required = false) UserRoles role,
